tests/negative/traits/mismatch_receiver.orng
// mismatch_receiver.orng:10:15: error: trait `My_Trait` specifies receiver `self` for method `f`, got receiver `&self`
//     fn f(&self) -> () {}
//              ^
// 
trait My_Trait {
    fn f(self) -> ()
}

impl My_Trait for Int {
    fn f(&self) -> () {}
}

fn main() -> Int {
    4
}